--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,16 @@ verify_ssl = true
 
 [dev-packages]
 pytest = "*"
+pylint = "*"
+ipython = "*"
+mypy = "*"
+black = "*"
 
 [packages]
+numpy = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
