Tests, bug fixes, and project setup
The prob matrix function now works (more or less) the same as the Perl
version. Tests for this have also been added, though they don't pass
yet.

Finish serialization code. Update README and Makefile to be more
consistent.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,7 @@
 [pytest]
-addopts = --doctest-modules
+addopts = --doctest-modules --strict-markers
+markers =
+    prob_matrix: tests related to the probability matrix
+    origin_matrix: tests related to the origin matrix
+    support_matrix: tests related to the support matrix
+    slow: slower tests, including those that use the filesystem (disable with '-m "not slow"')
