Add test stuff for alignments

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,5 @@ markers =
     prob_matrix: tests related to the probability matrix
     origin_matrix: tests related to the origin matrix
     support_matrix: tests related to the support matrix
+    alignments: alignment serialization tests
     slow: slower tests, including those that use the filesystem (disable with '-m "not slow"')
