Add substitution matrix loading

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ addopts = --doctest-modules --strict-markers
 markers =
     prob_matrix: tests related to the probability matrix
     origin_matrix: tests related to the origin matrix
+    sub_matrix: tests related to the substitution matrix
     support_matrix: tests related to the support matrix
     alignments: alignment serialization tests
     slow: slower tests, including those that use the filesystem (disable with '-m "not slow"')
