--- a/.github/workflows/polyA-ci.yml
+++ b/.github/workflows/polyA-ci.yml
@@ -3,16 +3,6 @@ name: PolyA CI
 on: [push, pull_request]
 
 jobs:
-  setup-dev:
-    runs-on: ubuntu-18.04
-    container:
-      image: traviswheelerlab/polya-build
-      volumes:
-        - ${{ github.workspace }}:/code
-    steps:
-      - uses: actions/checkout@v1
-      - run: make setup-dev
-
   check-fast:
     runs-on: ubuntu-18.04
     needs: setup-dev
@@ -22,7 +12,7 @@ jobs:
         - ${{ github.workspace }}:/code
     steps:
       - uses: actions/checkout@v1
-      - run: make check-fast
+      - run: make setup-dev check-fast
 
   check-slow:
     runs-on: ubuntu-18.04
@@ -33,7 +23,7 @@ jobs:
         - ${{ github.workspace }}:/code
     steps:
       - uses: actions/checkout@v1
-      - run: make check-slow
+      - run: make setup-dev check-slow
 
   check-format:
     runs-on: ubuntu-18.04
@@ -44,4 +34,4 @@ jobs:
         - ${{ github.workspace }}:/code
     steps:
       - uses: actions/checkout@v1
-      - run: make check-format
+      - run: make setup-dev check-format
