--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 numpy = "^1.18.1"
 matplotlib = "^3.2.1"
 
@@ -21,6 +21,10 @@ rope = "^0.16.0"
 pytest = "^5.3.5"
 black = "^19.10b0"
 ipython = "^7.13.0"
+
+[tool.black]
+line-length = 80
+target-version = ['py38']
 
 [build-system]
 requires = ["poetry>=0.12"]
