--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ rope = "^0.16.0"
 pytest = "^5.3.5"
 black = "^19.10b0"
 ipython = "^7.13.0"
+pprofile = "^2.0.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
