--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,11 @@
-[tool.poetry]
-name = "polyA"
-version = "0.1.0"
-description = "A clever sequence annotation adjudicator."
-authors = [
-    "Kaitlin Carey <kaitlin.carey@umontana.edu>",
-    "George Lesica <george.lesica@umontana.edu>",
-    "Travis Wheeler <travis.wheeler@umontana.edu>",
-]
-license = "Apache-2.0"
-
-[tool.poetry.dependencies]
-python = "^3.8"
-numpy = "^1.18.1"
-matplotlib = "^3.2.1"
-
-[tool.poetry.dev-dependencies]
-mypy = "^0.770"
-pylint = "^2.4.4"
-rope = "^0.16.0"
-pytest = "^5.3.5"
-black = "^19.10b0"
-ipython = "^7.13.0"
-pprofile = "^2.0.5"
-
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["flit_core >=2,<4"]
+build-backend = "flit_core.buildapi"
 
+[tool.flit.metadata]
+module = "polyA"
+author = "Kaitlin Carey"
+author-email = "kaitlin1.carey@umontana.edu"
+home-page = "https://github.com/TravisWheelerLab/polyA"
+classifiers = ["License :: OSI Approved :: MIT License"]
+description-file = "README.md"
