--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,5 @@ module = "polyA"
 author = "Kaitlin Carey"
 author-email = "kaitlin1.carey@umontana.edu"
 home-page = "https://github.com/TravisWheelerLab/polyA"
-classifiers = ["License :: OSI Approved :: MIT License"]
+classifiers = ["License :: OSI Approved :: BSD License"]
 description-file = "README.md"
