--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,10 @@ black = "*"
 flit = "*"
 ipython = "*"
 mypy = "*"
-pprofile = "*"
 pylint = ">=2.4.4,<3.0.0"
 pytest = ">=5.3.5,<6.0.0"
 rope = "*"
+scalene = "*"
 
 [packages]
 
