--- a/Pipfile
+++ b/Pipfile
@@ -8,15 +8,12 @@ black = "*"
 flit = "*"
 ipython = "*"
 mypy = "*"
-pprofile = "*"
 pylint = ">=2.4.4,<3.0.0"
 pytest = ">=5.3.5,<6.0.0"
 rope = "*"
+scalene = "*"
 
 [packages]
-
-[requires]
-python_version = "3.8"
 
 [pipenv]
 allow_prereleases = true
