--- a/.github/workflows/polyA-ci.yml
+++ b/.github/workflows/polyA-ci.yml
@@ -33,6 +33,16 @@ jobs:
       - uses: actions/checkout@v1
       - run: make setup-dev check-format
 
+  check-lints:
+    runs-on: ubuntu-20.04
+    container:
+      image: traviswheelerlab/polya-build
+      volumes:
+        - ${{ github.workspace }}:/code
+    steps:
+      - uses: actions/checkout@v1
+      - run: make setup-dev check-lints
+
   check-types:
     runs-on: ubuntu-20.04
     container:
