--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,13 @@ verify_ssl = true
 black = "*"
 flit = "*"
 ipython = "*"
+m2r2 = "*"
 mypy = "*"
 pylint = ">=2.4.4,<3.0.0"
 pytest = ">=5.3.5,<6.0.0"
 rope = "*"
 scalene = "*"
+sphinx = "*"
 
 [packages]
 
