--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,60 @@
 alabaster==0.7.12
 appnope==0.1.2
-astroid==2.5.6
+astroid==2.8.0
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
-black==21.5b2
+black==21.9b0
 certifi==2021.5.30
+charset-normalizer==2.0.6
 click==8.0.1
-cloudpickle==1.6.0
+cloudpickle==2.0.0
 colorama==0.4.4
 commonmark==0.9.1
-decorator==5.0.9
+decorator==5.1.0
 docutils==0.17.1
-flit==3.2.0
-flit-core==3.2.0
-idna==2.10
+flit==3.3.0
+flit-core==3.3.0
+idna==3.2
 imagesize==1.2.0
-ipython==7.24.1
-isort==5.8.0
+importlib-metadata==4.8.1
+ipython==7.27.0
+isort==5.9.3
 jedi==0.18.0
 Jinja2==3.0.1
 lazy-object-proxy==1.6.0
-m2r2==0.2.7
+m2r2==0.3.1
 MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
+matplotlib-inline==0.1.3
 mccabe==0.6.1
-mistune==0.8.4
-more-itertools==8.8.0
-mypy==0.901
+mistune==2.0.0rc1
+more-itertools==8.10.0
+mypy==0.910
 mypy-extensions==0.4.3
-numpy==1.20.3
+numpy==1.21.2
 nvidia-ml-py==11.450.51
-packaging==20.9
+packaging==21.0
 parso==0.8.2
-pathspec==0.8.1
+pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
+platformdirs==2.3.0
 pluggy==0.13.1
-prompt-toolkit==3.0.18
+prompt-toolkit==3.0.20
 ptyprocess==0.7.0
 py==1.10.0
-Pygments==2.9.0
-pylint==2.8.3
-pyparsing==2.4.7
+Pygments==2.10.0
+pylint==2.11.1
+pyparsing==3.0.0rc1
 pytest==5.4.3
 pytz==2021.1
-regex==2021.4.4
-requests==2.25.1
-rich==10.2.2
-rope==0.19.0
-scalene==1.3.6
+regex==2021.8.28
+requests==2.26.0
+rich==10.10.0
+rope==0.20.1
+scalene==1.3.12
 snowballstemmer==2.1.0
-Sphinx==4.0.2
+Sphinx==4.2.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
@@ -59,8 +62,11 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 toml==0.10.2
-traitlets==5.0.5
-typing-extensions==3.10.0.0
-urllib3==1.26.5
+tomli==1.2.1
+traitlets==5.1.0
+typed-ast==1.4.3
+typing-extensions==3.10.0.2
+urllib3==1.26.6
 wcwidth==0.2.5
 wrapt==1.12.1
+zipp==3.5.0
