--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 black = "*"
 flit = "*"
-ipython = "*"
+ipython = ">=7.31.0"
 mypy = "*"
 pylint = ">=2.4.4,<3.0.0"
 pytest = ">=5.3.5,<6.0.0"
