--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,77 @@
 alabaster==0.7.12
-appnope==0.1.2
-astroid==2.8.0
-attrs==21.2.0
-Babel==2.9.1
+appnope==0.1.3
+astroid==2.11.5
+asttokens==2.0.5
+attrs==21.4.0
+Babel==2.10.1
 backcall==0.2.0
-black==21.9b0
-certifi==2021.5.30
-charset-normalizer==2.0.6
-click==8.0.1
-cloudpickle==2.0.0
+black==22.3.0
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+click==8.1.3
+cloudpickle==2.1.0
 colorama==0.4.4
 commonmark==0.9.1
-decorator==5.1.0
-docutils==0.17.1
-flit==3.3.0
-flit-core==3.3.0
-idna==3.2
-imagesize==1.2.0
-importlib-metadata==4.8.1
-ipython==7.27.0
-isort==5.9.3
-jedi==0.18.0
-Jinja2==3.0.1
-lazy-object-proxy==1.6.0
-MarkupSafe==2.0.1
+decorator==5.1.1
+dill==0.3.5.1
+docutils==0.18.1
+executing==0.8.3
+flit==3.7.1
+flit_core==3.7.1
+idna==3.3
+imagesize==1.3.0
+importlib-metadata==4.11.4
+ipython==8.4.0
+isort==5.10.1
+jedi==0.18.1
+Jinja2==3.1.2
+lazy-object-proxy==1.7.1
+MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
-mccabe==0.6.1
-more-itertools==8.10.0
-mypy==0.910
+mccabe==0.7.0
+more-itertools==8.13.0
+mypy==0.960
 mypy-extensions==0.4.3
-numpy==1.21.2
+numpy==1.23.0rc2
 nvidia-ml-py==11.450.51
-packaging==21.0
-parso==0.8.2
+packaging==21.3
+parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
-platformdirs==2.3.0
+platformdirs==2.5.2
 pluggy==0.13.1
-prompt-toolkit==3.0.20
+prompt-toolkit==3.0.29
 ptyprocess==0.7.0
-py==1.10.0
-Pygments==2.10.0
-pylint==2.11.1
-pyparsing==3.0.0rc1
+pure-eval==0.2.2
+py==1.11.0
+Pygments==2.12.0
+pylint==2.14.0
+pynvml==11.4.1
+pyparsing==3.0.9
 pytest==5.4.3
-pytz==2021.1
+pytz==2022.1
 regex==2021.8.28
-requests==2.26.0
-rich==10.10.0
-scalene==1.3.12
-snowballstemmer==2.1.0
-Sphinx==4.2.0
+requests==2.27.1
+rich==12.4.4
+scalene==1.5.8
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==5.0.1
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
+stack-data==0.2.0
 toml==0.10.2
-tomli==1.2.1
-traitlets==5.1.0
-typed-ast==1.4.3
-typing-extensions==3.10.0.2
-urllib3==1.26.7
+tomli==2.0.1
+tomli_w==1.0.0
+tomlkit==0.11.0
+traitlets==5.3.0.dev0
+typing_extensions==4.2.0
+urllib3==1.26.9
 wcwidth==0.2.5
-wrapt==1.12.1
-zipp==3.5.0
+wrapt==1.14.1
+zipp==3.8.0
