--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ flit_core==3.7.1
 idna==3.3
 imagesize==1.3.0
 importlib-metadata==4.11.4
-ipython==8.4.0
+ipython==7.34.0
 isort==5.10.1
 jedi==0.18.1
 Jinja2==3.1.2
@@ -32,8 +32,8 @@ mccabe==0.7.0
 more-itertools==8.13.0
 mypy==0.960
 mypy-extensions==0.4.3
-numpy==1.23.0rc2
-nvidia-ml-py==11.450.51
+numpy==1.21.6
+nvidia-ml-py==11.515.48
 packaging==21.3
 parso==0.8.3
 pathspec==0.9.0
@@ -54,7 +54,7 @@ pytz==2022.1
 regex==2021.8.28
 requests==2.27.1
 rich==12.4.4
-scalene==1.5.8
+scalene==1.5.4
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==5.0.1
