--- a/Dockerfile_run
+++ b/Dockerfile_run
@@ -21,10 +21,15 @@ RUN autoconf && \
 FROM python:3.7-slim-bullseye as ultra
 
 RUN apt-get update && apt-get -y install \
-    git \
+    zip \
+    wget \
     build-essential \
     cmake
-RUN git clone https://github.com/TravisWheelerLab/ULTRA.git
+
+RUN wget https://github.com/traviswheelerlab/ultra/archive/545e0ce8058ca105d3a86e87bc6ef8b6862b5011.zip \
+    && unzip /545e0ce8058ca105d3a86e87bc6ef8b6862b5011.zip \
+    && mv /ULTRA-545e0ce8058ca105d3a86e87bc6ef8b6862b5011/ ULTRA/
+
 WORKDIR /ULTRA
 RUN cmake . && \
     make && \
